# Vecits

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  REPOSITORY.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.codactrl/: .gitignore  README.md  config.json
.codectx/: index.json
.codectx/explore/: latest.json
.codectx/perf/: startup-metrics.v1.jsonl  warmup-state.v1.json
.codectx/ux/: mode.v1.json
.codectx/verify/: issues-register.json  issues-register.summary.json  mcp-audit.jsonl
.cursor/: mcp.json
.data/: README.md
.dev/: README.md  client.cdp.yaml
.github/workflows/: ci.yml  release-build.yml
.playwright-mcp/: page-2026-07-03T14-59-34-383Z.yml
apps/: README.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: .gitignore  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  nfc.json
apps/desktop/src-tauri/icons/: .icon-source  icon.icns
apps/desktop/src-tauri/src/: key_vault.rs  lib.rs  main.rs  node_sidecar.rs
apps/web/: .env.local.example  README.md  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
crates/node/: Cargo.toml
crates/node/src/: event_log_chain.rs  ingest_rate_limit.rs  lib.rs  server.rs  storage.rs
crates/node/tests/: api.rs  runtime.rs  sync.rs
crates/policy/: Cargo.toml
crates/protocol-core/: Cargo.toml
crates/reputation/: Cargo.toml
crates/state-engine/: Cargo.toml
crates/state-engine/src/: lib.rs  model.rs  replay.rs
crates/state-engine/tests/: fixtures.rs  in_memory_replay.rs  reputation.rs
deploy/: docker-compose.production.yml
deploy/scripts/: r2-backup.sh
deploy/systemd/: vectis-backup.service  vectis-backup.timer  vectis-node.service
deploy/windows/: Register-VectisBackupTask.ps1
docker/: entrypoint.sh
docs/: README.md  START-HERE.md  frontend-phase1-completion.md  frontend-phase2-completion.md  frontend-phase2-plan.md  frontend-phase3-completion.md  frontend-phase3-plan.md  frontend-spec.md  index.md
docs/architecture/: README.md  aperio-engine-integration.md  discovery-engine-bridge.md  event-versioning-strategy.md  lane-template-catalog.md  phase2-compute-job-lane.md  software-fixes-lane.md  (+4 more)
scripts/: assemble-release-upload.mjs  build-desktop.mjs  build-release.mjs  build-web-static.mjs  ci-readiness.mjs  desktop-connection-smoke.mjs  desktop-deal-loop-smoke.mjs  dev-desktop.mjs  dev-tauri-web.mjs  dev-web.mjs  docker-smoke.mjs  ensure-dev-web-port.mjs  generate-p2h-policy-fixtures.mjs  generate-protocol-gap-fixtures.mjs  install.ps1  install.sh  local-ci-verify.mjs  migrate-data-dirs.mjs  r2-backup.mjs  r2-deploy-smoke.mjs  r2-evidence-export.mjs  r2-evidence-pack.mjs  r2-exchange-drill.mjs  r2-genesis-drill.mjs  r2-restore-drill.mjs  r4-client-audit.mjs  r5-policy-pack-export.mjs  r5-policy-pack-import-drill.mjs  r5-two-node-drill.mjs  r6-compute-job-drill.mjs  r6-lane-templates-smoke.mjs  r6-offline-lanes-smoke.mjs  r6-pd-closeout.mjs  r6-post-deployment-drill.mjs  r6-post-deployment-multi-lane-drill.mjs  r6-post-deployment-phase-c-packet.mjs  r6-post-deployment-phase-c-smoke.mjs  r6-post-deployment-readiness.mjs  r7-client-readiness.mjs  r7-desktop-release-smoke.mjs  (+38 more)
vectis-data/: manifest.json  node.db
vectis-data-r2/: manifest.json  node.db
vectis-data-r2-genesis/: manifest.json  node.db
vectis-data-r6/: manifest.json  node.db
vectis-data-r6-docs-test/: manifest.json  node.db
vectis-data-r6-l2/: manifest.json  node.db
vectis-data-r6-pd-documentation/: manifest.json  node.db
vectis-data-r6-test/: manifest.json  node.db
(+435 files in other folders)
