[package]
name = "vectis-desktop"
version = "0.1.0"
description = "Vectis official desktop client"
authors = ["Vectis"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "vectis_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
keyring = "3"
log = "0.4"
pbkdf2 = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
ureq = { version = "3.0.12", default-features = false, features = ["rustls"] }
